# collaborator

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  ipython_history.md  pyproject.toml  setup.cfg  setup.py
collaborator/: dashboard.py  graph_utils.py  hack.py  live_shows.py  playlist.py  songkick_utils.py  spotipy_utils.py
docs/: Makefile  conf.py  index.rst
src/collaborator/: skeleton.py
tests/: conftest.py  test_collaborator.py  test_skeleton.py
