[tool.poetry]
name = "collaborator"
version = "0.1.0"
description = ""
authors = ["Dan Harcombe <dan.h@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
spotipy = "^2.10.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
