[tool.poetry]
name = "collaborator"
version = "0.1.0"
description = ""
authors = ["Dan Harcombe <dan.h@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
spotipy = "^2.22.1"
typing = "^3.7.4"
python-dateutil = "^2.8.1"
plotly = "^4.6.0"
pandas = "^1.0.3"
dash = "^1.11.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
